# Python-Discord-Bot-Template

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  Procfile  README.md  TODO.md  UPDATES.md  blacklist.json  bot.py  config.json  config.py  config.yaml  docker-compose.yml  launch.bat  pyproject.toml  requirements.txt  utility.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cogs/: audio.py  context.py  counter.py  error.py  fun.py  general.py  help.py  moderation.py  muur.py  namen  namen.py  outofcontext.py  owner.py  reacties.py  slots.py  stats.py  template.py
cogs/normal/: fun-normal.py  general-normal.py  moderation-normal.py  owner-normal.py  template-normal.py
cogs/slash/: - Files that srart with - are disabled  fun-slash.py  general-slash.py  moderation-slash.py  owner-slash.py  template-slash.py
database/: __init__.py  schema.sql
exceptions/: __init__.py
helpers/: audio_controller.py  checks.py  db_manager.py  http.py  json_manager.py  ytdl.py  ytdl_helper.py
tests/: conftest.py  test_setup_validation.py
utils/: helper.py
